Wrong keyboard event order for backspace to delete selected text using GBoard
Categories
(GeckoView :: IME, defect, P3)
Tracking
(firefox67 wontfix, firefox67.0.1 wontfix, firefox68 wontfix, firefox75 fixed)
People
(Reporter: info, Assigned: m_kato)
References
Details
Attachments
(3 files)
Comment 1•7 years ago
|
||
Reporter | ||
Comment 2•7 years ago
|
||
Assignee | ||
Updated•7 years ago
|
Hi,
The issue is reproducible.
Environment
Device: Google Pixel C (Android 8.0.0)
Build: Firefox Nightly 68.0a1 (2019-05-08)
Regards,
Diana Rus
Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Diana Rus from comment #3)
Hi,
The issue is reproducible.
Environment
Device: Google Pixel C (Android 7.0.0)
Build: Firefox Nightly 68.0a1 (2019-05-08)Regards,
Diana Rus
Diana, is this result Huawei Swype? I don't have one and it is discontinued by Nuance.
Hi,
The used device for testing was "Google Pixel C" with Android(8.0.0) and not Huawei. The user used device Huawei Honor 8. I have updated my comment with the correct android version used with the device.
Regards,
Diana
Assignee | ||
Comment 6•6 years ago
|
||
(In reply to Diana Rus from comment #5)
The used device for testing was "Google Pixel C" with Android(8.0.0) and not Huawei. The user used device Huawei Honor 8. I have updated my comment with the correct android version used with the device.
Sorry for my question. What keyboard do you use on you Pixel C? Google GBoard?
Assignee | ||
Comment 8•6 years ago
|
||
Thanks, I can reproduce this with Gboard. I guess that this depends on precision feature of GBoard. It make composition, so it may create strange event.
Also, this occurs on GV (Reference Browser with GV 20190508)
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 9•5 years ago
|
||
Assignee | ||
Comment 10•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/013a2d2e8770
https://hg.mozilla.org/mozilla-central/rev/a2232c4a45b8
Updated•5 years ago
|
Comment 13•3 years ago
|
||
Moving some keyboard bugs to the new GeckoView::IME component.
Description
•