Bug 1499076 - Dispatch key down event before firing input event. r=geckoview-reviewers,snorp

When deleting text by backspace key of VKB, VKB might use `InputConnection.setComposingText`, not using KeyEvent. So although we dispatch dummy key event, the order of events is incorrect. We should dispatch keydown before input event.

Differential Revision: https://phabricator.services.mozilla.com/D64892

--HG--
extra : moz-landing-system : lando